--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,1 +1,83 @@
-<h1>Home</h1>
+<div class="row">
+  <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+      <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+      <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+      <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+    </ol>
+  
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner">
+      <div class="item active"></div><div class="item"></div><div class="item"></div>
+    </div>
+  
+    <!-- Controls -->
+    <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left"></span>
+        <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right"></span>
+        <span class="sr-only">Next</span>
+    </a>
+  </div>
+  <!-- carousel end -->
+</div>
+
+
+<div class="row hook_row">
+    <div class="container hook_div center">
+        <div class="col-md-12">
+            <h2>I scream, you scream, we all scream...</h1>
+            <h1>For homemade ice cream!</h1>
+        </div>
+    </div>
+</div>
+
+
+<div class="row about center">
+    <h1>About Us</h1>
+    <div class="col-md-4 about_seg">
+      <div class="icecream"></div>
+      <h2>Famous Ice Cream</h2>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam congue mattis iaculis. Phasellus ex erat, porttitor porta varius ut, feugiat id diam. Nunc tristique id elit sed rhoncus.
+      </p>
+    </div>
+    <div class="col-md-4 about_seg">
+      <div class="burger"></div>
+      <h2>Mouth-Watering Burgers</h2>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam congue mattis iaculis. Phasellus ex erat, porttitor porta varius ut, feugiat id diam. Nunc tristique id elit sed rhoncus.
+      </p>
+    </div>
+    <div class="col-md-4 about_seg">
+      <div class="loc"></div>
+      <h2>Location, Location, Location</h2>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam congue mattis iaculis. Phasellus ex erat, porttitor porta varius ut, feugiat id diam. Nunc tristique id elit sed rhoncus.
+      </p>
+    </div>
+</div>
+
+<div class="row info">
+  <h1 class="center">Info</h1>
+  <div class="col-md-3 col-md-offset-2">
+    <h2 class="center">Hours</h2></br>
+    <p class="center">Monday: Closed</p>
+    <p class="center">Tuesday - Sunday: 11am - 10pm</p>
+  </div>
+  <div class="col-md-3 col-md-offset-2">
+    <h2 class="center">Location</h2>
+    <iframe id="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3001.3418571218112!2d-95.85282018408209!3d41.21432011466812!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x879384298e73a277%3A0x93f66dbafb53f5bb!2s321+Comanche+St%2C+Council+Bluffs%2C+IA+51501!5e0!3m2!1sen!2sus!4v1498105149121" frameborder="0" style="border:0" allowfullscreen></iframe>
+  </div>
+  <div class="col-md-4 col-md-offset-4">
+    <p>Phone:&nbsp;<a href="tel:7122560398">(712) 256-0398</a>&nbsp; &nbsp; Email:&nbsp;<a href="mailto:doozies321@gmail.com">doozies321@gmail.com</a></p>
+    <p>Find Doozie's <a href="https://www.facebook.com/Dooziescouncilbluffs/" target="_blank">here</a> on Facebook and give our page a like!</p>
+  </div>
+</div>
+
+
+
+
