--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -11,7 +11,7 @@
     </div>
     <div class="container" id="page-nav">
       <!-- Collect the nav links, forms, and other content for toggling -->
-      <div class="col-xs-2 col-xs-offset-5">
+      <div class="col-xs-2 col-xs-offset-5 navdiv">
         <ul class="nav navbar-nav">
           <li><%= link_to "Home", root_path %></li>
           <li><%= link_to "Menu", menu_path %></li>
