Fix layout issues

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,8 +1,9 @@
 <nav class="navbar navbar-default navbar-fixed-top">
-  <div class="container logoClear">
+  <div class="container">
     <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="col-md-3 col-md-offset-4">
-      <div class="navbar-header">
+    <!-- <div class="col-md-3 col-md-offset-4 col-sm-offset-3"> -->
+    <div class="col-md-12">
+      <div class="logoContainer">
         <%= link_to root_path, class: 'navbar-brand' do %>
           <div class="doozieslogo"></div>
           <h1 class="dooziesTextLogo">Doozie&rsquo;s</h1>
@@ -11,8 +12,8 @@
     </div>
     <div class="container" id="page-nav">
       <!-- Collect the nav links, forms, and other content for toggling -->
-      <div class="col-xs-2 col-xs-offset-5 navdiv">
-        <ul class="nav navbar-nav">
+      <div class="col-md-12">
+        <ul class="navdiv">
           <li><%= link_to "Home", root_path %></li>
           <li><%= link_to "Menu", menu_path %></li>
         </ul>
