--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -38,6 +38,12 @@
 
 <div class="row about center">
     <h1>About Us</h1>
+    <h2>Well for starters, the only thing frozen is our ice cream!</h2>
+    <div class="col-md-12">
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam congue mattis iaculis. Phasellus ex erat, porttitor porta varius ut, feugiat id diam. Nunc tristique id elit sed rhoncus.
+      </p>
+    </div>
     <div class="col-md-4 about_seg">
       <div class="icecream"></div>
       <h2>Famous Ice Cream</h2>
@@ -49,7 +55,7 @@
       <div class="burger"></div>
       <h2>Mouth-Watering Burgers</h2>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam congue mattis iaculis. Phasellus ex erat, porttitor porta varius ut, feugiat id diam. Nunc tristique id elit sed rhoncus.
+        We only use fresh, locally sourced, choice meat that&rsquo;s ground daily and hand-pressed into 4 oz. patties, available as a single, double, or triple burger. Accompanied with fresh vegetables and our homemade Doozie Sauce, our juicy burgers are sure to have you coming back!
       </p>
     </div>
     <div class="col-md-4 about_seg">
@@ -61,14 +67,16 @@
     </div>
 </div>
 
-<div class="row info">
+<div class="row info_row">
   <h1 class="center">Info</h1>
+  <hr class="b">
+  <hr class="g">
   <div class="col-md-3 col-md-offset-2">
     <h2 class="center">Hours</h2></br>
     <p class="center">Monday: Closed</p>
     <p class="center">Tuesday - Sunday: 11am - 10pm</p>
   </div>
-  <div class="col-md-3 col-md-offset-2">
+  <div class="col-md-3 col-md-offset-2 locationdiv">
     <h2 class="center">Location</h2>
     <iframe id="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3001.3418571218112!2d-95.85282018408209!3d41.21432011466812!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x879384298e73a277%3A0x93f66dbafb53f5bb!2s321+Comanche+St%2C+Council+Bluffs%2C+IA+51501!5e0!3m2!1sen!2sus!4v1498105149121" frameborder="0" style="border:0" allowfullscreen></iframe>
   </div>
