--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,8 @@
-<% provide(:title, "Doozie's Homemade Ice Cream & Burgers") %>
+<% provide(:title, @meta_title) %>
 <!DOCTYPE html>
 <html>
 <head>
+  <meta name="description" content="<%= @meta_description %>"
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
   <meta charset="UTF-8">
   <title><%= yield(:title) %></title>
