--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -37,18 +37,18 @@
 
 
 <div class="row about center">
-    <h1>About Us</h1>
-    <h2>Well for starters, the only thing frozen is our ice cream!</h2>
-    <div class="col-md-12">
+    <div class="col-md-6 col-md-offset-3 about_col">
+      <h1>About Us</h1>
+      <h2>Well for starters, the only thing frozen is our ice cream!</h2>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam congue mattis iaculis. Phasellus ex erat, porttitor porta varius ut, feugiat id diam. Nunc tristique id elit sed rhoncus.
+        We have old fashion values when it comes to preparing our food and ice cream – hand crafting every item on the menu and always using local, simple products when doing so. You&rsquo;ll taste the difference!</br></br> Doozie&rsquo;s is a completely new building with a small dinning area, with additional patio seating and a walk up window to place and pick up orders. The owners, Don and Susie Larsen, are Manawa natives who are truly immersed into this tight knit community and want to provide an ever-lasting impression of a “doozie” of a time spent here.
       </p>
     </div>
     <div class="col-md-4 about_seg">
       <div class="icecream"></div>
-      <h2>Famous Ice Cream</h2>
+      <h2>Susie&rsquo;s Famous Ice Cream</h2>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam congue mattis iaculis. Phasellus ex erat, porttitor porta varius ut, feugiat id diam. Nunc tristique id elit sed rhoncus.
+        We offer a selection of 10 different homemade ice cream flavors at all times that get rotated on a daily basis. Susie only uses the highest quality of 14% butterfat and other ingredients when making her ice cream which makes her creamy, delicious ice cream stand out from any other.
       </p>
     </div>
     <div class="col-md-4 about_seg">
@@ -58,11 +58,11 @@
         We only use fresh, locally sourced, choice meat that&rsquo;s ground daily and hand-pressed into 4 oz. patties, available as a single, double, or triple burger. Accompanied with fresh vegetables and our homemade Doozie Sauce, our juicy burgers are sure to have you coming back!
       </p>
     </div>
-    <div class="col-md-4 about_seg">
+    <div class="col-md-4 about_seg locmini">
       <div class="loc"></div>
       <h2>Location, Location, Location</h2>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam congue mattis iaculis. Phasellus ex erat, porttitor porta varius ut, feugiat id diam. Nunc tristique id elit sed rhoncus.
+        Less than a 15-minute drive from downtown Omaha, we’re located right off Lake Manawa and directly across from the Council Bluffs Country Club. Spend a “doozie” of a day on the lake, trails, or golf course and be sure to cool down with a scoop of ice cream or grab a bite from the grill! 
       </p>
     </div>
 </div>
@@ -72,17 +72,16 @@
   <hr class="b">
   <hr class="g">
   <div class="col-md-3 col-md-offset-2">
-    <h2 class="center">Hours</h2></br>
+    <h2 class="center">Hours &amp; Contact</h2></br>
     <p class="center">Monday: Closed</p>
     <p class="center">Tuesday - Sunday: 11am - 10pm</p>
+    <p>Phone:&nbsp;<a href="tel:7122560398">(712) 256-0398</a></p>
+    <p>Email:&nbsp;<a href="mailto:doozies321@gmail.com">doozies321@gmail.com</a></p>
+    <p>Like <a href="https://www.facebook.com/Dooziescouncilbluffs/" target="_blank">Doozie&rsquo;s</a> on Facebook!</p>
   </div>
   <div class="col-md-3 col-md-offset-2 locationdiv">
     <h2 class="center">Location</h2>
     <iframe id="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3001.3418571218112!2d-95.85282018408209!3d41.21432011466812!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x879384298e73a277%3A0x93f66dbafb53f5bb!2s321+Comanche+St%2C+Council+Bluffs%2C+IA+51501!5e0!3m2!1sen!2sus!4v1498105149121" frameborder="0" style="border:0" allowfullscreen></iframe>
-  </div>
-  <div class="col-md-4 col-md-offset-4">
-    <p>Phone:&nbsp;<a href="tel:7122560398">(712) 256-0398</a>&nbsp; &nbsp; Email:&nbsp;<a href="mailto:doozies321@gmail.com">doozies321@gmail.com</a></p>
-    <p>Find Doozie's <a href="https://www.facebook.com/Dooziescouncilbluffs/" target="_blank">here</a> on Facebook and give our page a like!</p>
   </div>
 </div>
 
