Edit About content, Menu changes

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -41,7 +41,7 @@
       <h1>About Us</h1>
       <h2>Well for starters, the only thing frozen is our ice cream!</h2>
       <p>
-        We have old fashion values when it comes to preparing our food and ice cream – hand crafting every item on the menu and always using local, simple products when doing so. You&rsquo;ll taste the difference!</br></br> Doozie&rsquo;s is a completely new building with a small dinning area, with additional patio seating and a walk up window to place and pick up orders. The owners, Don and Susie Larsen, are Manawa natives who are truly immersed into this tight knit community and want to provide an ever-lasting impression of a “doozie” of a time spent here.
+        We have old fashion values when it comes to preparing our food and ice cream – hand crafting every item on the menu and always using local, simple products when doing so. You&rsquo;ll taste the difference!</br></br> Doozie&rsquo;s is a completely new building with a small dinning area, with additional patio seating and a walk up window to place and pick up orders. The owners, Don and Susie Larsen, are Manawa locals who are truly immersed into this tight knit community and want to provide an ever-lasting impression of a “doozie” of a time spent here.
       </p>
     </div>
     <div class="col-md-4 about_seg">
