--- a/app/views/pages/menu.html.erb
+++ b/app/views/pages/menu.html.erb
@@ -13,6 +13,9 @@
                 Combos come with a side of hand cut fries and a large drink.
                 Sub onion petals for 75&#162;.
             </p>
+            <p>
+                Add a mini shake, malt, float or freeze for 75&#162;.
+            </p>
             
             <div class="item">
                 <h3 class="mi">Doozie Burger &#36;4.85</h3>
@@ -30,6 +33,11 @@
                 <h3 class="mi">Triple Doozie &#36;8.00</h3>
                 <h4 class="mi">Combo &#36;10.95</h4>
                 <h5 class="mi">Add cheese 75&#162;</h5>
+            </div>
+            <div class="item">
+                <h3 class="mi">Burger Add Ons</h3>
+                <h4 class="mi">Bacon 90&#162;</h4>
+                <h5 class="mi">Fried egg 50&#162;</h5>
             </div>
         </div>
         <div class="col-md-4 col-sm-12 col-md-offset-2 menu_cat">
@@ -135,7 +143,7 @@
             <h2>Homemade Ice Cream</h2>
             <hr class="b">
             <hr class="g">
-            <p class="menu_cat_p">Call or stop in for our flavors!</p>
+            <p class="menu_cat_p"><a href="tel:7122560398">Call</a> or stop in for our flavors!</p>
             <div class="item">
                 <h3 class="mi">Cone or Cup</h3>
                 <h5 class="mi">1 scoop &#36;2.90 &nbsp; &nbsp; 2 scoops &#36;3.90 &nbsp; &nbsp; 3 scoops &#36;4.90</h5>
@@ -180,7 +188,7 @@
                 Cookie dough, peanut butter cups, M&#38;Ms, Butter Finger pieces, brownie, gummy bears, or Nerds
             </p>
             <div class="item">
-                <h5 class="mi">Small &#36;2.50 &nbsp; &nbsp; Medium &#36;3.50 &nbsp; &nbsp; Large &#36;4.25</h5>
+                <h5 class="mi">Mini &#36;2.75 &nbsp; &nbsp; Regular &#36;3.50 &nbsp; &nbsp; Large &#36;4.50</h5>
             </div>
         </div>
     </div>
@@ -189,17 +197,17 @@
             <h2>Shakes &#38; Malts</h2>
             <hr class="b">
             <hr class="g">
-            <p class="menu_cat_p">Vanilla, chocolate, double chocolate, strawberry, marshmallow, caramel, and pineapple</p>
+            <p class="menu_cat_p">Vanilla, chocolate, double chocolate, strawberry, marshmallow, caramel, pineapple, and butterscotch</p>
             <div class="item">
                 <h3 class="mi">Shakes</h3>
-                <h5 class="mi">Mini &#36;2.00 &nbsp; &nbsp; Medium &#36;2.75</h5>
-                <h5 class="mi">Large &#36;3.75 &nbsp; &nbsp; Jumbo &#36;5.00</h5>
+                <h5 class="mi">Mini &#36;2.00 &nbsp; &nbsp; Small &#36;2.75</h5>
+                <h5 class="mi">Medium &#36;3.75 &nbsp; &nbsp; Jumbo &#36;5.00</h5>
             </div>
             
             <div class="item">
                 <h3 class="mi">Malts</h3>
-                <h5 class="mi">Mini &#36;2.30 &nbsp; &nbsp; Medium &#36;3.05</h5>
-                <h5 class="mi">Large &#36;4.05 &nbsp; &nbsp; Jumbo &#36;5.30</h5>
+                <h5 class="mi">Mini &#36;2.30 &nbsp; &nbsp; Small &#36;3.05</h5>
+                <h5 class="mi">Medium &#36;4.05 &nbsp; &nbsp; Jumbo &#36;5.30</h5>
             </div>
         </div>
         <div class="col-md-4 menu_cat">
@@ -208,8 +216,8 @@
             <hr class="g">
             <p class="menu_cat_p">Root beer and orange soda</p>
             <div class="item">
-                <h5 class="mi">Mini &#36;2.00 &nbsp; &nbsp; Medium &#36;2.75</h5>
-                <h5 class="mi">Large &#36;3.75 &nbsp; &nbsp; Jumbo &#36;5.00</h5>
+                <h5 class="mi">Mini &#36;2.00 &nbsp; &nbsp; Small &#36;2.75</h5>
+                <h5 class="mi">Medium &#36;3.75 &nbsp; &nbsp; Jumbo &#36;5.00</h5>
             </div>
         </div>
         <div class="col-md-4 menu_cat">
@@ -231,7 +239,7 @@
             <div class="item">
                 <p class="menu_cat_p">Hot fudge, strawberry, caramel, marshmallow, pineapple</p>
                 <h5 class="mi">Small &#36;2.60 &nbsp; &nbsp; Medium &#36;3.00 &nbsp; &nbsp; Large &#36;3.40</h5>
-                <h5 class="mi">Additional toppings 50&#162; each</h5>
+                <h5 class="mi">Additional toppings 60&#162; each</h5>
                 <h5 class="mi">Nut topping 75&#162;</h5>
             </div>
         </div>
@@ -241,15 +249,11 @@
             <hr class="g">
             <div class="item">
                 <h3 class="mi">Banana Split &#36;5.25</h3>
-                <h5 class="mi">Hot fudge, strawberry, banana, pineapple, nut topping, and a cherry on top</h5>
-            </div>
-            <div class="item">
-                <h3 class="mi">Jack &#38; Jill &#36;5.25</h3>
-                <h5 class="mi">Hot fudge and marshmallow</h5>
+                <h5 class="mi">Chocolate syrup, strawberry, banana, pineapple, nut topping, and a cherry on top</h5>
             </div>
             <div class="item">
                 <h3 class="mi">Turtle &#36;5.25</h3>
-                <h5 class="mi">Hot fudge, caramel, and pecans</h5>
+                <h5 class="mi">Chocolate syrup, caramel, and pecans</h5>
             </div>
             <div class="item">
                 <h3 class="mi">Fudge Brownie &#36;5.25</h3>
