Add employment application pdf to assets, allow download through view

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -71,7 +71,12 @@
   <h1 class="center">Info</h1>
   <hr class="b">
   <hr class="g">
-  <div class="col-md-3 col-md-offset-2">
+  <div class="col-md-4">
+    <h2 class="center">Work at Doozie&rsquo;s!</h2>
+    <p class="center">Doozie&rsquo;s is always looking for talented individuals to build a strong team for our fast-paced environment.</p>
+    <p class="center">Grab an application <%= link_to "here", asset_path("DooziesApplication.pdf") %>.</p>
+  </div>
+  <div class="col-md-4">
     <h2 class="center">Hours &amp; Contact</h2></br>
     <p class="center">Monday: Closed</p>
     <p class="center">Tuesday - Sunday: 11am - 9pm</p>
@@ -79,7 +84,7 @@
     <p>Email:&nbsp;<a href="mailto:doozies321@gmail.com">doozies321@gmail.com</a></p>
     <p>Like <a href="https://www.facebook.com/Dooziescouncilbluffs/" target="_blank">Doozie&rsquo;s</a> on Facebook!</p>
   </div>
-  <div class="col-md-3 col-md-offset-2 locationdiv">
+  <div class="col-md-4 locationdiv">
     <h2 class="center">Location</h2>
     <iframe id="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3001.3418571218112!2d-95.85282018408209!3d41.21432011466812!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x879384298e73a277%3A0x93f66dbafb53f5bb!2s321+Comanche+St%2C+Council+Bluffs%2C+IA+51501!5e0!3m2!1sen!2sus!4v1498105149121" frameborder="0" style="border:0" allowfullscreen></iframe>
   </div>
