--- a/app/views/pages/menu.html.erb
+++ b/app/views/pages/menu.html.erb
@@ -1,7 +1,7 @@
 <div class="container menu_container">
     <div class="row menu_row">
         <h1 class="center">Menu</h1>
-        <div class="col-md-4 col-sm-12 col-md-offset-1 menu_cat">
+        <div class="col-md-4 col-sm-12 menu_cat">
             <h2>Burgers</h2>
             <hr class="b">
             <hr class="g">
@@ -14,7 +14,7 @@
                 Sub onion petals for 75&#162;.
             </p>
             <p>
-                Add a mini shake, malt, float or freeze for 75&#162;.
+                Sub 16 oz. Malt, Shake, Float or Freeze for 75&#162;.
             </p>
             
             <div class="item">
@@ -36,48 +36,69 @@
             </div>
             <div class="item">
                 <h3 class="mi">Burger Add Ons</h3>
-                <h4 class="mi">Bacon 90&#162;</h4>
-                <h5 class="mi">Fried egg 50&#162;</h5>
+                <h5 class="mi">Bacon 90&#162;</h5>
+                <h5 class="mi">Fried egg, jalapeno, or caramelized onions 50&#162;</h5>
             </div>
         </div>
-        <div class="col-md-4 col-sm-12 col-md-offset-2 menu_cat">
+        <div class="col-md-4 col-sm-12 menu_cat">
             <h2>Sandwiches</h2>
             <hr class="b">
             <hr class="g">
             
             <div class="item">
-                <h3 class="mi">Breaded Pork Loin &#36;5.25</h3>
+                <h3 class="mi">Breaded Pork Loin &#36;5.45</h3>
                 <h5 class="mi">Pickle, onion, and mayo</h5>
-                <h4 class="mi">Combo &#36;8.95</h4>
+                <h4 class="mi">Combo &#36;8.45</h4>
             </div>
             
             <div class="item">
-                <h3 class="mi">Chicken Sandwich &#36;5.30</h3>
-                <h5 class="mi">Grilled or hand breaded</br>Lettuce, tomato, onion, and mayo</h5>
-                <h4 class="mi">Combo &#36;7.95</h4>
-            </div>
-            
-            <div class="item">
-                <h3 class="mi">Patty Melt &#36;4.85</h3>
+                <h3 class="mi">Patty Melt &#36;5.10</h3>
                 <h5 class="mi">Swiss cheese, caramelized onions, and Doozie sauce on Texas toast</h5>
-                <h4 class="mi">Combo &#36;7.95</h4>
+                <h4 class="mi">Combo &#36;8.10</h4>
             </div>
             
             <div class="item">
-                <h3 class="mi">Hot Dog &#36;2.95</h3>
-                <h4 class="mi">Combo &#36;5.75</h4>
+                <h3 class="mi">Hot Dog &#36;3.10</h3>
+                <h4 class="mi">Combo &#36;6.10</h4>
             </div>
             
             <div class="item">
-                <h3 class="mi">3 Chicken Tenders </br>w/ Fries &#36;5.65</h3>
-                <h4 class="mi">Combo &#36;6.35</h4>
-                <h4 class="mi">Add a tender for &#36;1.35</h4>
+                <h3 class="mi">Chili Dog &#36;3.70</h3>
+                <h4 class="mi">Combo &#36;6.70</h4>
             </div>
             
             <div class="item">
-                <h3 class="mi">Grilled Cheese &#36;2.90</h3>
+                <h3 class="mi">Sloppy Joe &#36;3.65</h3>
+                <h4 class="mi">Combo &#36;6.65</h4>
+            </div>
+            
+            <div class="item">
+                <h3 class="mi">Grilled Cheese &#36;3.00</h3>
                 <h5 class="mi">American and Swiss cheese on Texas toast</h5>
-                <h4 class="mi">Combo &#36;5.05</h4>
+                <h4 class="mi">Combo &#36;6.00</h4>
+            </div>
+        </div>
+        <div class="col-md-4 col-sm-12 menu_cat">
+            <h2>Chicken Options</h2>
+            <hr class="b">
+            <hr class="g">
+            
+            <div class="item">
+                <h3 class="mi">Chicken Sandwich &#36;5.55</h3>
+                <h5 class="mi">Grilled or hand breaded</br>Lettuce, tomato, onion, and mayo</h5>
+                <h4 class="mi">Combo &#36;8.55</h4>
+            </div>
+            
+            <div class="item">
+                <h3 class="mi">Crispy Buffalo Chicken Sandwich &#36;6.10</h3>
+                <h5 class="mi">Lettuce, tomato, onion, ranch and swiss cheese</h5>
+                <h4 class="mi">Combo &#36;9.10</h4>
+            </div>
+            
+            <div class="item">
+                <h3 class="mi">3 Chicken Tenders </br>w/ Fries &#36;5.95</h3>
+                <h4 class="mi">Combo &#36;7.20</h4>
+                <h4 class="mi">Add a tender for &#36;1.50</h4>
             </div>
         </div>
     </div>
@@ -89,7 +110,7 @@
             <div class="item">
                 <h3 class="mi">Garden Salad &#36;4.25</h3>
                 <h5 class="mi">Tomato, red onion, cucumber, and carrot</h5>
-                <h4 class="mi">Add grilled or hand breaded chicken for &#36;2.75</h4>
+                <h4 class="mi">Add grilled or hand breaded chicken for &#36;3.70</h4>
             </div>
             
             <div class="item">
@@ -100,7 +121,7 @@
             <div class="item">
                 <h3 class="mi">Dressing</h3>
                 <h5 class="mi">Buttermilk ranch, house italian, Dorothy Lynch, and honey mustard</h5>
-                <h4 class="mi">50&#162; per extra</h4>
+                <h4 class="mi">35&#162; per extra</h4>
             </div>
         </div>
         <div class="col-md-4 menu_cat">
@@ -108,7 +129,7 @@
             <hr class="b">
             <hr class="g">
             <div class="item">
-                <h3 class="mi">Fries &#36;2.10</h3>
+                <h3 class="mi">Fries &#36;2.60</h3>
             </div>
             
             <div class="item">
@@ -116,9 +137,17 @@
             </div>
             
             <div class="item">
+                <h3 class="mi">Side Salad &#36;2.75</h3>
+            </div>
+            
+            <div class="item">
+                <h3 class="mi">Chili Cheese Fries &#36;3.75</h3>
+            </div>
+            
+            <div class="item">
                 <h3 class="mi">Sauce</h3>
                 <h5 class="mi">Doozie Sauce, buttermilk ranch, honey mustard, BBQ, buffalo sauce</h5>
-                <h4 class="mi">50&#162; per extra</h4>
+                <h4 class="mi">35&#162; per extra</h4>
             </div>
         </div>
         <div class="col-md-4 menu_cat">
@@ -132,9 +161,7 @@
             </div>
             
             <div class="item">
-                <h3 class="mi">Bottled drinks</h3>
-                <h5 class="mi">Soda, Powerade, Tea &nbsp; &#36;2.15</h5>
-                <h5 class="mi">Water 50&#162;</h5>
+                <h3 class="mi">Bottled water 50&#162;</h3>
             </div>
         </div>
     </div>
@@ -146,14 +173,14 @@
             <p class="menu_cat_p"><a href="tel:7122560398">Call</a> or stop in for our flavors!</p>
             <div class="item">
                 <h3 class="mi">Cone or Cup</h3>
-                <h5 class="mi">1 scoop &#36;2.90 &nbsp; &nbsp; 2 scoops &#36;3.90 &nbsp; &nbsp; 3 scoops &#36;4.90</h5>
+                <h5 class="mi">1 scoop &#36;3.20 &nbsp; &nbsp; 2 scoops &#36;4.20 &nbsp; &nbsp; 3 scoops &#36;5.20</h5>
                 <h5 class="mi">Waffle cone 75&#162; extra</h5>
                 <h5 class="mi">Toppings 60&#162; each (cups only)</h5>
             </div>
             
             <div class="item">
                 <h3 class="mi">Large Quantity</h3>
-                <h5 class="mi">Pint &#36;6.00 &nbsp; &nbsp; Quart &#36;9.75</h5>
+                <h5 class="mi">Pint &#36;6.00 &nbsp; &nbsp; Quart &#36;10.00</h5>
             </div>
         </div>
         <div class="col-md-4 menu_cat">
@@ -161,23 +188,18 @@
             <hr class="b">
             <hr class="g">
             <div class="item">
-                <h3 class="mi">Soft Serve Cone</h3>
+                <h3 class="mi">Soft Serve Cone or Cup</h3>
                 <h5 class="mi">Vanilla, chocolate, or twist</h5>
                 <h5 class="mi">Baby &#36;1.10 &nbsp; &nbsp; Small &#36;1.90</h5>
                 <h5 class="mi">Medium &#36;2.30 &nbsp; &nbsp; Large &#36;2.80</h5>
                 <h5 class="mi">Waffle cone 75&#162; extra</h5>
+                <h5 class="mi">Toppings 60&#162; each (cups only)</h5>
             </div>
             
             <div class="item">
                 <h3 class="mi">Dipped Cone</h3>
-                <h5 class="mi">Chocolate, cherry, or crunch</h5>
-                <h5 class="mi">Medium &#36;2.30 &nbsp; &nbsp; Large &#36;2.80</h5>
-            </div>
-            
-            <div class="item">
-                <h3 class="mi">Soft Serve Cup</h3>
-                <h5 class="mi">Small &#36;1.90 &nbsp; &nbsp; Medium &#36;2.30 &nbsp; &nbsp; Large &#36;2.80</h5>
-                <h5 class="mi">Toppings 60&#162; each</h5>
+                <h5 class="mi">Chocolate, cherry, or butterscotch</h5>
+                <h5 class="mi">Small &#36;2.40 &nbsp; &nbsp; Medium &#36;2.80 &nbsp; &nbsp; Large &#36;3.30</h5>
             </div>
         </div>
         <div class="col-md-4 menu_cat">
@@ -185,10 +207,10 @@
             <hr class="b">
             <hr class="g">
             <p class="menu_cat_p">
-                Cookie dough, peanut butter cups, M&#38;Ms, Butter Finger pieces, brownie, gummy bears, or Nerds
+                Cookie dough, Oreos, peanut butter cups, M&#38;Ms, Butter Finger pieces, brownie, gummy bears, or Nerds
             </p>
             <div class="item">
-                <h5 class="mi">Mini &#36;2.75 &nbsp; &nbsp; Regular &#36;3.50 &nbsp; &nbsp; Large &#36;4.50</h5>
+                <h5 class="mi">Small &#36;3.10 &nbsp; &nbsp; Medium &#36;4.10 &nbsp; &nbsp; Large &#36;5.50</h5>
             </div>
         </div>
     </div>
@@ -200,14 +222,14 @@
             <p class="menu_cat_p">Vanilla, chocolate, double chocolate, strawberry, marshmallow, caramel, pineapple, and butterscotch</p>
             <div class="item">
                 <h3 class="mi">Shakes</h3>
-                <h5 class="mi">Mini &#36;2.00 &nbsp; &nbsp; Small &#36;2.75</h5>
-                <h5 class="mi">Medium &#36;3.75 &nbsp; &nbsp; Jumbo &#36;5.00</h5>
+                <h5 class="mi">Small &#36;2.50 &nbsp; &nbsp; Medium &#36;3.25</h5>
+                <h5 class="mi">Large &#36;4.25 &nbsp; &nbsp; Jumbo &#36;5.50</h5>
             </div>
             
             <div class="item">
                 <h3 class="mi">Malts</h3>
-                <h5 class="mi">Mini &#36;2.30 &nbsp; &nbsp; Small &#36;3.05</h5>
-                <h5 class="mi">Medium &#36;4.05 &nbsp; &nbsp; Jumbo &#36;5.30</h5>
+                <h5 class="mi">Small &#36;2.75 &nbsp; &nbsp; Medium &#36;3.50</h5>
+                <h5 class="mi">Large &#36;4.50 &nbsp; &nbsp; Jumbo &#36;5.50</h5>
             </div>
         </div>
         <div class="col-md-4 menu_cat">
@@ -216,8 +238,8 @@
             <hr class="g">
             <p class="menu_cat_p">Root beer and orange soda</p>
             <div class="item">
-                <h5 class="mi">Mini &#36;2.00 &nbsp; &nbsp; Small &#36;2.75</h5>
-                <h5 class="mi">Medium &#36;3.75 &nbsp; &nbsp; Jumbo &#36;5.00</h5>
+                <h5 class="mi">Small &#36;2.00 &nbsp; &nbsp; Medium &#36;2.75</h5>
+                <h5 class="mi">Large &#36;3.75 &nbsp; &nbsp; Jumbo &#36;5.00</h5>
             </div>
         </div>
         <div class="col-md-4 menu_cat">
@@ -227,37 +249,64 @@
             <p class="menu_cat_p">Peach and Strawberry</p>
             <div class="item">
                 <h5 class="mi">Regular &#36;4.25 &nbsp; &nbsp; Large &#36;5.50</h5>
-                <h5 class="mi">Add ice cream for 50&#162;</h5>
             </div>
         </div>
     </div>
-    <div class="row menu_row" id="last_mc">
-        <div class="col-md-4 col-sm-12 col-md-offset-1 menu_cat">
+    <div class="row menu_row">
+        <div class="col-md-4 col-sm-12 menu_cat">
             <h2>Sundaes</h2>
             <hr class="b">
             <hr class="g">
             <div class="item">
-                <p class="menu_cat_p">Hot fudge, strawberry, caramel, marshmallow, pineapple</p>
-                <h5 class="mi">Small &#36;2.60 &nbsp; &nbsp; Medium &#36;3.00 &nbsp; &nbsp; Large &#36;3.40</h5>
+                <p class="menu_cat_p">Hot fudge, strawberry, caramel, marshmallow, pineapple, and butterscotch</p>
+                <h5 class="mi">Small &#36;2.50 &nbsp; &nbsp; Medium &#36;2.90 &nbsp; &nbsp; Large &#36;3.40</h5>
                 <h5 class="mi">Additional toppings 60&#162; each</h5>
                 <h5 class="mi">Nut topping 75&#162;</h5>
             </div>
         </div>
-        <div class="col-md-4 col-sm-12 col-md-offset-2 menu_cat">
+        <div class="col-md-4 col-sm-12 menu_cat">
             <h2>Specialty Sundaes</h2>
             <hr class="b">
             <hr class="g">
             <div class="item">
                 <h3 class="mi">Banana Split &#36;5.25</h3>
-                <h5 class="mi">Chocolate syrup, strawberry, banana, pineapple, nut topping, and a cherry on top</h5>
+                <h5 class="mi">Chocolate syrup, strawberry, banana, pineapple, nut topping, whipped cream, and a cherry on top</h5>
             </div>
             <div class="item">
                 <h3 class="mi">Turtle &#36;5.25</h3>
-                <h5 class="mi">Chocolate syrup, caramel, and pecans</h5>
+                <h5 class="mi">Chocolate syrup, caramel, pecans, two pecan clusters, and whipped cream</h5>
             </div>
             <div class="item">
                 <h3 class="mi">Fudge Brownie &#36;5.25</h3>
-                <h5 class="mi">Hot fudge and fudge brownie</h5>
+                <h5 class="mi">Hot fudge, fudge brownie, and whipped cream</h5>
+            </div>
+        </div>
+        <div class="col-md-4 col-sm-12 menu_cat">
+            <h2>Frozen Treats</h2>
+            <hr class="b">
+            <hr class="g">
+            <div class="item">
+                <h3 class="mi">Novelty Bars &#36;2.00</h3>
+            </div>
+            <div class="item">
+                <h3 class="mi">Ice Cream Sandwiches &#36;3.50</h3>
+            </div>
+        </div>
+    </div>
+    <div class="row menu_row" id="last_mc">
+        <div class="col-md-6 col-sm-12 col-md-offset-3 menu_cat">
+            <h2>Kid's Menu</h2>
+            <hr class="b">
+            <hr class="g">
+            <p class="menu_cat_p">All kid’s meals come with a small drink, fries, and one small ice cream. </br> No substitutions.</p>
+            <div class="item">
+                <h3 class="mi">Hot Dog &#36;5.85</h3>
+            </div>
+            <div class="item">
+                <h3 class="mi">Grilled Cheese &#36;5.85</h3>
+            </div>
+            <div class="item">
+                <h3 class="mi">2 Chicken Tenders &#36;5.85</h3>
             </div>
         </div>
     </div>
