fix background attachment for mobile

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -457,6 +457,19 @@ h1.dooziesTextLogo {
         height: 600px;
         margin-top: 75px;
     }
+    
+    .temp_ordersandcakes_row {
+        background-attachment: local;
+    }
+    
+    .hook_row {
+        background-attachment: local;
+    }
+    
+    .info_row {
+        background-attachment: local;
+    }
+    
 }
 
 @media all and (max-width: 991px) {
