add phone link to orders

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -29,7 +29,7 @@
     <div class="temp_ordersandcakes_div center">
         <div class="col-md-4 col-md-offset-1">
             <h1>WE ARE NOW ACCEPTING HOLIDAY ICE CREAM PRE-ORDERS!</h1>
-            <p>We will be opening our doors November 17th and December 15th from 2 pm - 4 pm for holiday pick-up orders. We are offering limited flavors of pints, quarts and ice cream cakes to be pre-ordered. During these two days we will be accepting cash only as payment, we encourage anyone wanting to pay with a card to prepay when placing your order. Order by December 12th for your December 15th pick-up. To place your order, or for more information or any questions you may have contact us at 712-256-0398!</p>
+            <p>We will be opening our doors November 17th and December 15th from 2 pm - 4 pm for holiday pick-up orders. We are offering limited flavors of pints, quarts and ice cream cakes to be pre-ordered. During these two days we will be accepting cash only as payment, we encourage anyone wanting to pay with a card to prepay when placing your order. Order by December 12th for your December 15th pick-up. To place your order, or for more information or any questions you may have contact us at <a href="tel:7122560398">712-256-0398</a>!</p>
         </div>
         <div class="col-md-5 col-md-offset-1">
           
@@ -130,7 +130,7 @@
     <h2 class="center">Hours &amp; Contact</h2></br>
     <p class="center">Monday: Closed</p>
     <p class="center">Tuesday - Sunday: 11am - 10pm</p>
-    <p>Phone:&nbsp;<a href="tel:7122560398">(712) 256-0398</a></p>
+    <p>Phone:&nbsp;<a href="tel:7122560398">712-256-0398</a></p>
     <p>Email:&nbsp;<a href="mailto:doozies321@gmail.com">doozies321@gmail.com</a></p>
     <p>Like <a href="https://www.facebook.com/Dooziescouncilbluffs/" target="_blank">Doozie&rsquo;s</a> on Facebook!</p>
   </div>
