--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -282,10 +282,11 @@ h1.dooziesTextLogo {
         padding: 100px 0px 100px 0px;
     }
     h1 {
-        font-size: 2.5em;
+        font-size: 3em;
     }
     h2 {
-        font-size: 1.5em;
+        font-size: 2.5em;
+        color: black;
     }
     p {
         font-size: 1.25em;
